# eng-on-esc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.rs
.github/workflows/: release.yml
assets/: icon.rc
macos/: Cargo.toml
macos/src/: main.rs
src/: main.rs
tools/: generate-icon.ps1
windows/: build.rs
windows/src/: main.rs
