[package]
name = "eng-on-esc"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "2"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
