[package]
name = "eng-on-esc"
version = "0.4.0"
edition = "2021"

# macOS 전용 빌드.
# rdev::grab 이 CGEventTap 을 사용하므로 Accessibility 권한이 필요하다.
#   시스템 환경설정 → 개인 정보 보호 및 보안 → 손쉬운 사용 → 이 앱 허용

[dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }
tray-icon = "0.19"
tao = "0.30"
core-foundation = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
